# actix-with-elasticsearch

./: .gitignore  LICENSE  README.md  docker-compose.yml
docker/elasticsearch/: Dockerfile
docker/webapp/: Dockerfile
webapp/: Cargo.toml
webapp/src/: main.rs
