[package]
name = "actix-elasticsearch"
version = "0.1.0"
authors = ["kikei <fujii@xaxxi.net>"]
edition = "2018"

[dependencies]
actix-web = "2"
actix-rt = "1"
elasticsearch = "7.7.0-alpha.1"
tokio = "0.2"
futures = "0.3"
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
